more fixing resizing issues. Button overflowing outside of container

--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body {
   font-family: "Shadows Into Light";
 }
 .container {
-  min-height: 20vh;
-  height: auto;
+  height: 20vh;
   width: 45vw;
   background-color: #fff;
   display: flex;
